# tea_partition_generator

./: Cargo.toml  design.txt  readme.md  reset_mnt_btrfs.sh  reset_mnt_ext4.sh  reset_partition_table.sh
sample/: 30_may_24_win10_gpt_uefi.json
src/: blueprint.rs  build_env.rs  config.rs  core.rs  disk_helper.rs  dual_boot_blockdev.rs  dual_boot_efi_mount.rs  exception.rs  lib.rs  mkpart.rs  mounting.rs  nvme_helper.rs  os.rs  parted_parser.rs  single_boot_blockdev.rs  tealinux_build_env.rs
